--- a/docker/acr/Dockerfile.linux.amd64
+++ b/docker/acr/Dockerfile.linux.amd64
@@ -1,4 +1,4 @@
-FROM plugins/docker:linux-amd64
+FROM plugins/buildx:linux-amd64
 
 ADD release/linux/amd64/drone-acr /bin/
 ENTRYPOINT ["/usr/local/bin/dockerd-entrypoint.sh", "/bin/drone-acr"]
