--- a/docker/docker/Dockerfile.linux.arm64
+++ b/docker/docker/Dockerfile.linux.arm64
@@ -2,5 +2,16 @@ FROM arm64v8/docker:20.10.14-dind
 
 ENV DOCKER_HOST=unix:///var/run/docker.sock
 
+ENV DOCKER_BUILDKIT=1
+ENV BUILDKIT_PROGRESS=plain
+ENV DOCKER_CLI_EXPERIMENTAL=enabled
+
+ARG BUILDX_URL=https://github.com/docker/buildx/releases/download/v0.14.1/buildx-v0.14.1.linux-arm64
+
+RUN mkdir -p $HOME/.docker/cli-plugins && \
+    wget -O $HOME/.docker/cli-plugins/docker-buildx $BUILDX_URL && \
+    chmod a+x $HOME/.docker/cli-plugins/docker-buildx
+
+
 ADD release/linux/arm64/drone-docker /bin/
 ENTRYPOINT ["/usr/local/bin/dockerd-entrypoint.sh", "/bin/drone-docker"]
