--- a/docker/heroku/Dockerfile.linux.arm64
+++ b/docker/heroku/Dockerfile.linux.arm64
@@ -1,4 +1,4 @@
-FROM plugins/docker:linux-arm64
+FROM plugins/buildx:linux-arm64
 
 ADD release/linux/arm64/drone-heroku /bin/
 ENTRYPOINT ["/usr/local/bin/dockerd-entrypoint.sh", "/bin/drone-heroku"]
