Update .drone.yml for windows binary

--- a/.drone.yml
+++ b/.drone.yml
@@ -1007,7 +1007,7 @@ steps:
       - GOOS=linux   GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-linux-arm64 ./cmd/drone-docker
       - GOOS=darwin  GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-darwin-amd64 ./cmd/drone-docker
       - GOOS=darwin  GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-darwin-arm64 ./cmd/drone-docker
-      - GOOS=windows GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-windows-amd64.exe ./cmd/drone-docker
+      - GOOS=windows GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-windows-amd64 ./cmd/drone-docker
 
     environment:
       CGO_ENABLED: 0
@@ -1021,7 +1021,7 @@ steps:
       - zstd release/drone-buildx-linux-arm64
       - zstd release/drone-buildx-darwin-arm64
       - zstd release/drone-buildx-darwin-amd64
-      - zstd release/drone-buildx-windows-amd64.exe
+      - zstd release/drone-buildx-windows-amd64
 
   - name: release
     image: plugins/github-release
@@ -1031,7 +1031,7 @@ steps:
         - release/drone-buildx-linux-arm64.zst
         - release/drone-buildx-darwin-arm64.zst
         - release/drone-buildx-darwin-amd64.zst
-        - release/drone-buildx-windows-amd64.exe.zst
+        - release/drone-buildx-windows-amd64.zst
       api_key:
         from_secret: github_token
     when:
