[feat]: [CI-15228]: Embed and load buildkit image in drone buildx (#46)
* [feat]: [CI-15228]: Embed and load buildkit image in drone buildx

* Update README.md

* Update docker.go

* Update docker.go

* Update docker.go

* Update docker.go

* update

* Update docker.go

* Update README.md

* give an option to not load buildkit

* Update docker.go

* Update .drone.yml

* update release.sh

* Update .drone.yml

* Update release.sh

* Update docker.go

* Update readme

* Delete .DS_Store

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ steps:
   - name: vet
     image: golang:1.22
     commands:
+      - sh buildkit/release.sh linux/amd64
       - go vet ./...
     environment:
 
@@ -24,6 +25,7 @@ steps:
   - name: test
     image: golang:1.22
     commands:
+      - sh buildkit/release.sh linux/amd64
       - go test -cover ./...
     environment:
 
@@ -59,6 +61,7 @@ steps:
    environment:
      CGO_ENABLED: 0
    commands:
+     - sh buildkit/release.sh linux/amd64
      - go build -o release/windows/amd64/drone-docker.exe ./cmd/drone-docker
  - name: build docker plugin
    image: plugins/docker@sha256:f0233d950ae87ee6cb5500b2d5497fe02aa338201c0bdce2619f443fd174cfa4
@@ -102,6 +105,7 @@ steps:
    environment:
      CGO_ENABLED: 0
    commands:
+     - sh buildkit/release.sh linux/amd64
      - go build -o release/windows/amd64/drone-docker.exe ./cmd/drone-docker
  - name: build docker plugin
    image: plugins/docker
@@ -143,6 +147,7 @@ steps:
  - name: build-push
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/amd64
      - 'go build -v -ldflags "-X main.version=${DRONE_COMMIT_SHA:0:8}" -a -tags netgo -o release/linux/amd64/drone-docker ./cmd/drone-docker'
    environment:
      CGO_ENABLED: 0
@@ -154,6 +159,7 @@ steps:
  - name: build-tag
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/amd64
      - 'go build -v -ldflags "-X main.version=${DRONE_TAG##v}" -a -tags netgo -o release/linux/amd64/drone-docker ./cmd/drone-docker'
    environment:
      CGO_ENABLED: 0
@@ -164,6 +170,7 @@ steps:
  - name: executable
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/amd64
      - ./release/linux/amd64/drone-docker --help
 
  - name: publish
@@ -208,6 +215,7 @@ steps:
  - name: build-push
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/arm64
      - 'go build -v -ldflags "-X main.version=${DRONE_COMMIT_SHA:0:8}" -a -tags netgo -o release/linux/arm64/drone-docker ./cmd/drone-docker'
    environment:
      CGO_ENABLED: 0
@@ -219,6 +227,7 @@ steps:
  - name: build-tag
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/arm64
      - 'go build -v -ldflags "-X main.version=${DRONE_TAG##v}" -a -tags netgo -o release/linux/arm64/drone-docker ./cmd/drone-docker'
    environment:
      CGO_ENABLED: 0
@@ -229,6 +238,7 @@ steps:
  - name: executable
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/arm64
      - ./release/linux/arm64/drone-docker --help
 
  - name: publish
@@ -308,6 +318,7 @@ steps:
  - name: build-push
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/amd64
      - 'go build -v -ldflags "-X main.version=${DRONE_COMMIT_SHA:0:8}" -a -tags netgo -o release/linux/amd64/drone-heroku ./cmd/drone-heroku'
    environment:
      CGO_ENABLED: 0
@@ -318,6 +329,7 @@ steps:
  - name: build-tag
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/amd64
      - 'go build -v -ldflags "-X main.version=${DRONE_TAG##v}" -a -tags netgo -o release/linux/amd64/drone-heroku ./cmd/drone-heroku'
    environment:
      CGO_ENABLED: 0
@@ -367,6 +379,7 @@ steps:
  - name: build-push
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/arm64
      - 'go build -v -ldflags "-X main.version=${DRONE_COMMIT_SHA:0:8}" -a -tags netgo -o release/linux/arm64/drone-heroku ./cmd/drone-heroku'
    environment:
      CGO_ENABLED: 0
@@ -377,6 +390,7 @@ steps:
  - name: build-tag
    image: golang:1.22
    commands:
+     - sh buildkit/release.sh linux/arm64
      - 'go build -v -ldflags "-X main.version=${DRONE_TAG##v}" -a -tags netgo -o release/linux/arm64/drone-heroku ./cmd/drone-heroku'
    environment:
      CGO_ENABLED: 0
@@ -456,11 +470,13 @@ steps:
     pull: always
     image: golang:1.22
     commands:
+      - sh buildkit/release.sh linux/amd64
       - GOOS=linux   GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-linux-amd64 ./cmd/drone-docker
-      - GOOS=linux   GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-linux-arm64 ./cmd/drone-docker
       - GOOS=darwin  GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-darwin-amd64 ./cmd/drone-docker
-      - GOOS=darwin  GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-darwin-arm64 ./cmd/drone-docker
       - GOOS=windows GOARCH=amd64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-windows-amd64 ./cmd/drone-docker
+      - sh buildkit/release.sh linux/arm64
+      - GOOS=linux   GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-linux-arm64 ./cmd/drone-docker
+      - GOOS=darwin  GOARCH=arm64   go build -ldflags "-s -w" -a -tags netgo -o release/drone-buildx-darwin-arm64 ./cmd/drone-docker
 
     environment:
       CGO_ENABLED: 0
