--- a/docker/docker/Dockerfile.linux.amd64
+++ b/docker/docker/Dockerfile.linux.amd64
@@ -5,12 +5,20 @@ ENV DOCKER_HOST=unix:///var/run/docker.sock
 ENV DOCKER_BUILDKIT=1
 ENV BUILDKIT_PROGRESS=plain
 ENV DOCKER_CLI_EXPERIMENTAL=enabled
+ENV PLUGIN_BUILDKIT_ASSETS_DIR=/buildkit
 
 ARG BUILDX_URL=https://github.com/docker/buildx/releases/download/v0.18.0/buildx-v0.18.0.linux-amd64
 
 RUN mkdir -p $HOME/.docker/cli-plugins && \
     wget -O $HOME/.docker/cli-plugins/docker-buildx $BUILDX_URL && \
     chmod a+x $HOME/.docker/cli-plugins/docker-buildx
+
+# Create /buildkit directory
+RUN mkdir -p /buildkit
+
+# Add buildkit.tar and version
+COPY buildkit/buildkit.tar /buildkit/buildkit.tar
+COPY buildkit/version.json /buildkit/version.json
 
 ADD release/linux/amd64/drone-docker /bin/
 ENTRYPOINT ["/usr/local/bin/dockerd-entrypoint.sh", "/bin/drone-docker"]
