--- a/.drone.yml
+++ b/.drone.yml
@@ -236,6 +236,11 @@ steps:
    commands:
      - ./release/linux/arm64/drone-docker --help
 
+ - name: buildkit-tarball
+   image: docker:27.3.1-dind
+   commands:
+     - sh buildkit/release.sh
+
  - name: publish
    image: plugins/docker:18
    settings:
@@ -330,6 +335,11 @@ steps:
      event:
        - tag
 
+ - name: buildkit-tarball
+   image: docker:27.3.1-dind
+   commands:
+     - sh buildkit/release.sh
+
  - name: publish
    image: plugins/docker:18
    settings:
@@ -388,6 +398,12 @@ steps:
    when:
      event:
        - tag
+
+ - name: buildkit-tarball
+   image: docker:27.3.1-dind
+   commands:
+     - sh buildkit/release.sh
+  
  - name: publish
    image: plugins/docker:18
    settings:
