--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 run:
   binary:
-    source: wronglink
+    source: wronglink123
     fallback_source: https://app.harness.io/storage/harness-download/harness-ti/drone-buildx/{{ release }}/drone-buildx-{{ os }}-{{ arch }}.zst
